--- a/Copy_of_DataAnalytics(Clusering123).ipynb
+++ b/Copy_of_DataAnalytics(Clusering123).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPkenswDB+1HbLbNIZ1mok",
+      "authorship_tag": "ABX9TyNnyeHT248waD2OJiYgR0wA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2128,6 +2128,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Replacing With Mean Values**"
+      ],
+      "metadata": {
+        "id": "QM6v9JB8sAz0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gfJJu0o4sAOk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **Top Universities most number of Students are joined**"
       ],
       "metadata": {
@@ -2999,31 +3017,86 @@
     {
       "cell_type": "code",
       "source": [
-        "# Automatically detect categorical columns (object/string types)\n",
-        "categorical_columns = data.select_dtypes(include=['object']).columns.tolist()\n",
+        "import pandas as pd, numpy as np\n",
+        "from sklearn.cluster import KMeans\n",
         "\n",
-        "# Manually include numeric columns that are actually categorical\n",
-        "categorical_columns.append('Public (1)/ Private (2)')\n",
+        "# Load and clean data\n",
+        "df = pd.read_csv('/content/Universities.csv').replace('...', np.nan).dropna()\n",
+        "cols = df.columns[2:]\n",
+        "df[cols] = df[cols].astype(float)\n",
         "\n",
-        "# Display the categorical columns\n",
-        "print(\"Categorical Columns:\")\n",
-        "print(categorical_columns)\n"
+        "# Normalize numeric data\n",
+        "X = (df[cols] - df[cols].mean()) / df[cols].std()\n",
+        "\n",
+        "# K-Means clustering\n",
+        "kmeans = KMeans(n_clusters=3, random_state=42).fit(X)\n",
+        "centroids = pd.DataFrame(kmeans.cluster_centers_, columns=X.columns)\n",
+        "\n",
+        "# Show all valid column names for reference\n",
+        "print(\"\\nValid column names:\\n\", cols.tolist())\n",
+        "\n",
+        "# Tufts record using matching column names only\n",
+        "tufts_data = {col: np.nan for col in cols}\n",
+        "tufts_data.update({\n",
+        "    'Public (1)/ Private (2)': 2,\n",
+        "    'in-state tuition': 59464,\n",
+        "    'out-of-state tuition': 59464,\n",
+        "    'board': 4886,\n",
+        "    'add. fees': 0,\n",
+        "    'estim. book costs': 1100,\n",
+        "    'estim. personal $': 2300,\n",
+        "    '% fac. w/ PHD': 0.961,\n",
+        "    'stud./fac. ratio': 9.9,\n",
+        "    'Graduation rate': 95.0\n",
+        "})\n",
+        "\n",
+        "# Create Tufts DataFrame\n",
+        "tufts = pd.DataFrame([tufts_data])\n",
+        "\n",
+        "# Normalize Tufts, compute distance to centroids\n",
+        "tufts_norm = (tufts - X.mean()) / X.std()\n",
+        "distances = [np.linalg.norm(tufts_norm - c) for _, c in centroids.iterrows()]\n",
+        "cluster_index = np.argmin(distances)\n",
+        "\n",
+        "# Impute missing using nearest cluster centroid\n",
+        "tufts_imputed = tufts.fillna(centroids.iloc[cluster_index] * X.std() + X.mean()).round(0)\n",
+        "print(\"\\nImputed Tufts Record:\\n\")\n",
+        "print(tufts_imputed)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2RjgHUvUaWMq",
-        "outputId": "06b62303-5e94-4725-f962-b53631f393d0"
+        "id": "CsoK361lqScu",
+        "outputId": "b87a347b-e042-4aac-c8ca-5ab3e3c43303"
       },
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Categorical Columns:\n",
-            "['College Name', 'State', 'Public (1)/ Private (2)']\n"
+            "\n",
+            "Valid column names:\n",
+            " ['Public (1)/ Private (2)', \"# appli. rec'd\", '# appl. accepted', '# new stud. enrolled', '% new stud. from top 10%', '% new stud. from top 25%', '# FT undergrad', '# PT undergrad', 'in-state tuition', 'out-of-state tuition', 'room', 'board', 'add. fees', 'estim. book costs', 'estim. personal $', '% fac. w/PHD', 'stud./fac. ratio', 'Graduation rate']\n",
+            "\n",
+            "Imputed Tufts Record:\n",
+            "\n",
+            "   Public (1)/ Private (2)  # appli. rec'd  # appl. accepted  \\\n",
+            "0                        2            -1.0              -1.0   \n",
+            "\n",
+            "   # new stud. enrolled  % new stud. from top 10%  % new stud. from top 25%  \\\n",
+            "0                  -1.0                      -1.0                      -2.0   \n",
+            "\n",
+            "   # FT undergrad  # PT undergrad  in-state tuition  out-of-state tuition  \\\n",
+            "0            -1.0            -0.0             59464                 59464   \n",
+            "\n",
+            "   room  board  add. fees  estim. book costs  estim. personal $  % fac. w/PHD  \\\n",
+            "0   2.0   4886          0               1100               2300          -4.0   \n",
+            "\n",
+            "   stud./fac. ratio  Graduation rate  % fac. w/ PHD  \n",
+            "0              10.0             95.0            1.0  \n"
           ]
         }
       ]
