--- a/Copy_of_DataAnalytics(Clusering123).ipynb
+++ b/Copy_of_DataAnalytics(Clusering123).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnyeHT248waD2OJiYgR0wA",
+      "authorship_tag": "ABX9TyM1atAiuy50+LM7VbhWt5iK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2136,12 +2136,161 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for col in data.columns:\n",
+        "   if data[col].isnull().any():\n",
+        "      data[col] = data[col].fillna(data[col].mean())\n",
+        "\n",
+        "data.isnull().sum()"
+      ],
       "metadata": {
-        "id": "gfJJu0o4sAOk"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 711
+        },
+        "id": "b6lq6fmxtmEz",
+        "outputId": "50064e38-2fc8-4a0e-a49e-57a44122e381"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "College Name                0\n",
+              "State                       0\n",
+              "Public (1)/ Private (2)     0\n",
+              "# appli. rec'd              0\n",
+              "# appl. accepted            0\n",
+              "# new stud. enrolled        0\n",
+              "% new stud. from top 10%    0\n",
+              "% new stud. from top 25%    0\n",
+              "# FT undergrad              0\n",
+              "# PT undergrad              0\n",
+              "in-state tuition            0\n",
+              "out-of-state tuition        0\n",
+              "room                        0\n",
+              "board                       0\n",
+              "add. fees                   0\n",
+              "estim. book costs           0\n",
+              "estim. personal $           0\n",
+              "% fac. w/PHD                0\n",
+              "stud./fac. ratio            0\n",
+              "Graduation rate             0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>College Name</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>State</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Public (1)/ Private (2)</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th># appli. rec'd</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th># appl. accepted</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th># new stud. enrolled</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>% new stud. from top 10%</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>% new stud. from top 25%</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th># FT undergrad</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th># PT undergrad</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>in-state tuition</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>out-of-state tuition</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>room</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>board</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>add. fees</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>estim. book costs</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>estim. personal $</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>% fac. w/PHD</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>stud./fac. ratio</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Graduation rate</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
